2006-03-19 Erik Hjortsberg  <erik@katastrof.nu>

    * src/components/ogre/EmberOgre.cpp: reactivated setting of the window icon
    * src/components/ogre/widgets/EntityCEGUITexture.cpp, src/components/ogre/widgets/MovableObjectRenderer.cpp: fixed the implementation to work with Ogre 1.2, without causing segfaults
    
2006-03-19 Erik Hjortsberg  <erik@katastrof.nu>
